force-app/main/default/objects/Student__c/fields/Course_name__c.field-meta.xml
<CustomField>
    <fullName>Course_name__c</fullName>
    <label>Course name</label>
    <referenceTo>Course__c</referenceTo>
    <relationshipLabel>Students</relationshipLabel>
    <relationshipName>Students</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>