force-app/main/default/objects/Student__c/fields/Qualificatio__c.field-meta.xml
<CustomField>
    <fullName>Qualificatio__c</fullName>
    <label>Qualificatio</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>UG</fullName>
            </value>
            <value>
                <fullName>Gradute</fullName>
            </value>
            <value>
                <fullName>PG</fullName>
            </value>
            <value>
                <fullName>PHD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>