force-app/main/default/objects/Student__c/fields/Sname__c.field-meta.xml
<CustomField>
    <fullName>Sname__c</fullName>
    <label>Sname</label>
    <length>25</length>
    <type>Text</type>
</CustomField>