force-app/main/default/objects/Student__c/fields/Trainer_Name__c.field-meta.xml
<CustomField>
    <fullName>Trainer_Name__c</fullName>
    <label>Trainer Name</label>
    <referenceTo>Trainer__c</referenceTo>
    <relationshipLabel>Students</relationshipLabel>
    <relationshipName>Students</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>