force-app/main/default/objects/Student__c/validationRules/Age_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Age_Rule</fullName>
    <active>true</active>
    <errorConditionFormula>Age__c  &lt; 23</errorConditionFormula>
    <errorDisplayField>DOB__c</errorDisplayField>
    <errorMessage>Age should more than 23 years</errorMessage>
</ValidationRule>